# oxrsys

./: .gitignore  AGENTS.md  CHANGES.md  CMakeLists.txt  CMakePresets.json  README.md  mise.toml  vcpkg.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: commitlint.yml  pr-android-build.yml  pr-apple-builds.yml  pr-macos-runtime-heavy.yml  release-please.yml
clients/Android/android-vr/: settings.gradle.kts
clients/Android/android-vr/app/: build.gradle.kts
clients/Apple/common/OXRSysSimulator/: Package.swift
clients/Apple/common/OXRSysStreaming/: Package.swift
clients/Apple/oxrsys-home/OXRSys Home/: ContentView.swift  HomeAppModel.swift  HomeLauncher.swift  HomePreferences.swift  HomeSupport.swift  HomeWindows.swift  OXRSysHomeApp.swift  OXRSysServerConfig.swift
clients/Apple/oxrsys-home/OXRSys Home.xcodeproj/: project.pbxproj
clients/Apple/oxrsys-simulator/OXRSys Simulator/: OXRSys Simulator.entitlements
clients/Apple/oxrsys-simulator/OXRSys Simulator.xcodeproj/: project.pbxproj
clients/Apple/oxrsys-visionos/OXRSys visionOS/: AppModel.swift  ContentView.swift  ImmersiveRenderer.swift  OXRSysVisionOSApp.swift  Renderer.swift  Shaders.metal  VisionTrackingManager.swift
clients/Apple/oxrsys-visionos/OXRSys visionOS.xcodeproj/: project.pbxproj
clients/OXRSys Clients.xcworkspace/: contents.xcworkspacedata
clients/Qt/: CMakeLists.txt
clients/Qt/assets/: oxrsys-home-icons.qrc  oxrsys-home.rc  oxrsys-simulator-icons.qrc  oxrsys-simulator.rc
clients/Qt/cmake/: DetectQt6.cmake
clients/Qt/oxrsys-home/: CMakeLists.txt
clients/Qt/oxrsys-home/src/: AdbBridge.cpp  AdbBridge.h  HomeModel.cpp  HomeModel.h  Launcher.cpp  Launcher.h  MainWindow.cpp  MainWindow.h  PlatformSupport.cpp  PlatformSupport.h  RuntimeActivity.cpp  RuntimeActivity.h  RuntimeManager.cpp  RuntimeManager.h  ServerConfig.cpp  ServerConfig.h  main.cpp
clients/Qt/oxrsys-home/tests/: HomeCoreTests.cpp
clients/Qt/oxrsys-simulator/: CMakeLists.txt
clients/Qt/oxrsys-simulator-shared/: CMakeLists.txt
clients/Qt/oxrsys-simulator-shared/src/: SimulatorTracking.cpp  SimulatorTracking.h  SimulatorWidget.cpp  SimulatorWidget.h  VideoFrameAssembler.cpp  VideoFrameAssembler.h
clients/Qt/oxrsys-simulator-shared/tests/: SimulatorSharedTests.cpp
clients/Qt/oxrsys-simulator/src/: main.cpp
clients/android-openxr/app/: build.gradle.kts
clients/android-openxr/app/src/main/cpp/: CMakeLists.txt  XrApp.cpp  XrApp.h
clients/common/OXRSysSimulator/: Package.swift
clients/common/OXRSysSimulator/Sources/OXRSysSimulator/: ARTrackingManager.swift  SimulatorModel.swift
clients/common/OXRSysStreaming/Sources/OXRSysStreaming/: ControlChannel.swift  H265Decoder.swift  LatencyReporter.swift  Protocol.swift  StereoRenderer.swift  TrackingSender.swift
clients/common/OXRSysStreaming/Tests/OXRSysStreamingTests/: ProtocolLayoutTests.swift
clients/companion/OpenXR OSX Companion/: CompanionAppModel.swift  CompanionLauncher.swift  CompanionSupport.swift  ContentView.swift
clients/companion/OpenXR OSX Companion.xcodeproj/: project.pbxproj
clients/oxrsys-android/: .gitignore  build.gradle.kts  gradle.properties
clients/oxrsys-android/app/: build.gradle.kts
clients/oxrsys-android/app/src/main/: AndroidManifest.xml
clients/oxrsys-home/OXRSys Home/: ContentView.swift  HomeLauncher.swift  HomeSupport.swift  OXRSys Home.entitlements  OXRSysServerConfig.swift
clients/oxrsys-home/OXRSys Home.xcodeproj/: project.pbxproj
clients/oxrsys-home/OXRSys Home/Assets.xcassets/AppIcon.appiconset/: Contents.json
clients/oxrsys-simulator/OXRSys Simulator/: OXRSys Simulator.entitlements  OXRSysSimulatorApp.swift
clients/oxrsys-simulator/OXRSys Simulator/Assets.xcassets/AppIcon.appiconset/: Contents.json
clients/oxrsys-visionos/OXRSys visionOS/: ImmersiveRenderer.swift  OXRSysVisionOSApp.swift  ShaderTypes.h  Shaders.metal  ToggleImmersiveSpaceButton.swift
cmake/: ResolveFFmpeg.cmake  ResolveVulkanHeaders.cmake  SyncCompileCommands.cmake
common/protocol/include/oxrsys/protocol/: FecCodec.h  Foveation.h  (+1 more)
config/: OXRSysVersion.xcconfig
docs/: architecture.md  build.md  install.md  licensing.md  protocol.md  releases.md  simulator.md  testing-and-conformance.md
runtime/: CMakeLists.txt  oxrsys-runtime.json.in  oxrsys-runtime.toml
runtime/src/: ActionSet.cpp  ActionSet.h  CompositionLayerAlpha.h  Config.cpp  Config.h  D3DGraphicsContext.h  EntryPoint.cpp  FfmpegVideoEncoder.cpp  GraphicsTypes.h  InputManager.cpp  InputManager.h  Instance.cpp  Instance.h  OpenXRPlatform.h  RuntimePlatform.cpp  RuntimePlatform.h  RuntimeSockets.cpp  RuntimeSockets.h  RuntimeStatus.cpp  RuntimeStatus.h  Session.cpp  Session.h  Space.cpp  Space.h  StreamingAbr.h  StreamingFrameQueue.cpp  StreamingFrameQueue.h  StreamingReconfigure.h  StreamingServer.cpp  StreamingServer.h  StreamingTransportPolicy.h  Swapchain.h  Swapchain.mm  SwapchainCommon.cpp  SwapchainD3D11.cpp  SwapchainD3D12.cpp  SwapchainMetal.mm  SwapchainOpenGL.cpp  SwapchainVulkan.cpp  TrackingReceiver.cpp  (+6 more)
scripts/: README.md  calibrate_webcam_rig.py  macos_build_package.sh  macos_sign_notarize.sh  oxrsys_runtime_default.sh  package_companion.sh  package_home.sh  windows_build.ps1  windows_configure.ps1
scripts/ci/: build-android.sh  build-companion.sh  build-simulator.sh  build-visionos.sh  commitlint.py  common.sh  install-commit-msg-hook.sh  package-release-assets.sh  verify-macos-runtime-heavy.sh  verify-pr-lightweight.sh
scripts/unity/: README.md  package.json
scripts/unity/Editor/: OXRSys.Unity.Editor.asmdef  OXRSysMacOpenXRLoaderPostprocessor.cs  OXRSysRuntimeAutoSelector.cs
tests/: CompanionLauncherTests.swift  HomeLauncherTests.swift  TestCompositionLayerAlpha.cpp  TestConfig.cpp  TestInputManager.cpp  TestMetalSupport.mm  TestProtocolLayout.cpp  TestQuestPassthroughAlphaPolicy.cpp  TestQuestShellInteraction.cpp  TestRuntimeApi.cpp  TestRuntimeLoaderExtensions.cpp  TestRuntimePlatform.cpp  TestRuntimeStatus.cpp  TestStreamingAbr.cpp  TestStreamingFrameQueue.cpp  TestStreamingReconfigure.cpp  TestVulkanDispatch.cpp  TestWindowsD3D.cpp
(+48 files in other folders)
